# cppgame2

./: .gitignore  .gitmodules  CMakeLists.txt  postbuild.cmake
cppengine/: CMakeLists.txt
cppengine/engine/: CMakeLists.txt
cppengine/engine/include/: engine.hpp
cppengine/engine/include/assets/: asset_context.hpp  asset_handle.hpp  assets_pch.hpp  enum_asset_format.hpp  image_handle.hpp
cppengine/engine/include/ecs/: component.hpp  component_allocator.hpp  component_allocator_impl.hpp  component_descriptor.hpp  component_descriptor_impl.hpp  ecs.hpp  enum_scene_state.hpp  game_object.hpp  object_allocator_context.hpp  object_allocator_context_impl.hpp  scene.hpp  scene_impl.hpp  scene_manager.hpp  scene_manager_impl.hpp  scene_setup.hpp
cppengine/engine/include/events/: event_dispatcher.hpp
cppengine/engine/include/graphics/: box2d_primitive.hpp  camera.hpp  camera_2d.hpp  enum_attribute_location.hpp  enum_shader_id.hpp  (+11 more)
cppengine/glfw_glad_integration/: CMakeLists.txt
cppengine/glfw_glad_integration/glad/: CMakeLists.txt
cppengine/glfw_glad_integration/include/: gg_integration.hpp  glad_model_context.hpp  glad_model_handle.hpp  glad_renderer_context.hpp  glad_shader_context.hpp  glad_shader_handle.hpp  glad_shader_helper.hpp  glad_texture_handle.hpp
cppengine/glfw_glad_integration/src/: glad_draw_context.cpp  glad_model_context.cpp  glad_model_handle.cpp  glad_renderer.cpp  glad_renderer_context.cpp  glad_shader_context.cpp  glad_shader_handle.cpp  glad_shader_helper.cpp  glad_texture_context.cpp
cppengine/stb_asset_integration/: CMakeLists.txt
cppengine/stb_asset_integration/include/: stb_image_handle.hpp
cppengine/stb_asset_integration/src/: stb_image_handle.cpp
cppengine/stb_asset_integration/stb/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: engine.hpp
engine/include/assets/: assets.hpp  assets_pch.hpp  image_context.hpp  image_handle.hpp  image_loader_context.hpp
engine/include/ecs/: component.hpp  component_descriptor.hpp  component_impl.hpp  ecs.hpp  enum_scene_state.hpp  game_object.hpp  scene.hpp  scene_impl.hpp  scene_manager.hpp  time.hpp
engine/include/events/: events.hpp
engine/include/graphics/: box2d_primitive.hpp  camera.hpp  camera_2d.hpp  colour.hpp  draw_context.hpp  enum_camera_mode.hpp  enum_model_id.hpp  enum_shader_id.hpp  graphics.hpp  material.hpp  model_context.hpp  model_handle.hpp  primitive.hpp  renderable.hpp  renderer.hpp  renderer_context.hpp  shader_context.hpp  shader_handle.hpp  shader_helper.hpp  shader_location_name.hpp  sprite_sheet.hpp  texture_handle.hpp  triangle_primitive.hpp  uniform.hpp
engine/include/integration/: draw_context.hpp  graphics.hpp  graphics_context.hpp  input_context.hpp  integration.hpp  renderer_context.hpp  window_context.hpp
engine/include/maths/: box_2d.hpp  math_helper.hpp  maths.hpp  matrix2x2.hpp  matrix3x3.hpp  matrix4x4.hpp  quaternion.hpp  rectangle_2d.hpp  transform.hpp  triangle.hpp  vector2.hpp  vector3.hpp  vector4.hpp
engine/include/memory/: memory_control_block.hpp  object_allocator.hpp  object_handle.hpp  objects.hpp  reference_counter.hpp  type_descriptor.hpp  weak_handle.hpp
engine/include/platform/: assets.hpp  enum_key_code.hpp  platform.hpp  window.hpp  window_context.hpp
engine/src/assets/: assets.cpp
engine/src/ecs/: component.cpp  enum_scene_state.cpp  game_object.cpp  scene.cpp  scene_manager.cpp  time.cpp
engine/src/graphics/: box_2d_primitive.cpp  colour.cpp  material.cpp  primitive.cpp  renderable.cpp  renderer.cpp  shader_context.cpp  shader_handle.cpp  texture_handle.cpp  triangle_primitive.cpp
engine/src/integration/: draw_context.cpp  graphics.cpp  renderer_context.cpp  window.cpp
engine/src/maths/: math_helper.cpp  matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp  quaternion.cpp  rectangle_2d.cpp  transform.cpp  triangle.cpp  vector2.cpp  vector3.cpp  vector4.cpp
engine/src/memory/: memory_control_block.cpp  reference_counter.cpp  type_descriptor.cpp
engine/src/platform/: assets.cpp  input.cpp  time.cpp  window.cpp
game/: CMakeLists.txt  game_postbuild.cmake
game/include/: game.hpp  test_component.hpp  test_component_2.hpp  test_level.hpp
game/src/: main.cpp  test_component.cpp  test_component_2.cpp  test_level.cpp
glfw_glad_integration/: CMakeLists.txt
glfw_glad_integration/include/: gg_context_manager.hpp  gg_integration.hpp  glad_draw_context.hpp  glad_model_context.hpp  glad_model_handle.hpp  glad_renderer_context.hpp  glad_shader_context.hpp  glad_shader_handle.hpp  glad_texture_context.hpp  glad_texture_handle.hpp  glfw_input_context.hpp  glfw_window_context.hpp
glfw_glad_integration/src/: gg_context_manager.cpp  gg_integration.cpp  glad_draw_context.cpp  glad_model_context.cpp  glad_model_handle.cpp  glad_renderer.cpp  glad_renderer_context.cpp  glad_shader_context.cpp  glad_shader_handle.cpp  glad_shader_helper.cpp  glad_texture_handle.cpp  glfw_input.cpp  glfw_input_context.cpp  glfw_window.cpp  glfw_window_context.cpp
raylib_integration/: CMakeLists.txt
raylib_integration/include/: raylib_draw_context.hpp  raylib_draw_context_2d.hpp  raylib_graphics_context.hpp  raylib_input_context.hpp  raylib_integration.hpp  raylib_model_context.hpp  raylib_model_handle.hpp  raylib_renderer_context.hpp  raylib_shader_context.hpp  raylib_shader_handle.hpp  raylib_texture_context.hpp  raylib_texture_handle.hpp  raylib_window_context.hpp
raylib_integration/src/: integration.cpp  raylib_draw_context.cpp  raylib_draw_context_2d.cpp  raylib_graphics.cpp  raylib_graphics_context.cpp  raylib_input.cpp  raylib_input_context.cpp  raylib_integration.cpp  raylib_model_context.cpp  raylib_model_handle.cpp  raylib_renderer.cpp  raylib_renderer_context.cpp  raylib_shader_context.cpp  raylib_shader_handle.cpp  raylib_texture_context.cpp  raylib_texture_handle.cpp  raylib_window.cpp  raylib_window_context.cpp
stb_asset_integration/: CMakeLists.txt
stb_asset_integration/include/: stb_assets_pch.hpp  stb_image_context.hpp  stb_image_loader_context.hpp
stb_asset_integration/src/: stb_assets.cpp  stb_image_loader_context.cpp
(+60 files in other folders)
