cmake_minimum_required(VERSION 3.24)

project(cppengine CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

option(ENGINE_INTEGRATION_GLFW_GLAD "Use GLFW+GLAD integration" ON)
option(ENGINE_ASSET_INTEGRATION_STB "Use STB asset integration" ON)

set(ENGINE_TARGET engine)
set(ENGINE_PLATFORM_INTEGRATION_TARGET platform)
set(ENGINE_ASSET_INTEGRATION_TARGET assets)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/engine/")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/glfw_glad_integration/")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/stb_asset_integration/")

get_property(ENGINE_LINKED GLOBAL PROPERTY ENGINE_LINKED)
get_property(PLATFORM_LINKED GLOBAL PROPERTY ENGINE_PLATFORM_INTEGRATION_LINKED)
get_property(ASSET_LINKED GLOBAL PROPERTY ENGINE_ASSET_INTEGRATION_LINKED)

if(NOT ENGINE_LINKED OR NOT PLATFORM_LINKED OR NOT ASSET_LINKED)
    message(FATAL_ERROR "essential libraries could not be linked, please check settings: engine - ${ENGINE_LINKED}, platform - ${PLATFORM_LINKED}, assets - ${ASSET_LINKED}")
else()
add_library(${PROJECT_NAME} STATIC)
target_link_libraries(${PROJECT_NAME} ${ENGINE_TARGET} ${ENGINE_PLATFORM_INTEGRATION_TARGET} ${ENGINE_ASSET_INTEGRATION_TARGET})
add_dependencies(${PROJECT_NAME} ${ENGINE_TARGET} ${ENGINE_PLATFORM_INTEGRATION_TARGET} ${ENGINE_ASSET_INTEGRATION_TARGET})
set_property(GLOBAL PROPERTY CPP_GAME_ENGINE_LIB ${PROJECT_NAME})
endif()